--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class="box-text">
-        <a href="#"> Equilibrium #3429</a>
+        <h1><a href="#"> Equilibrium #3429</a></h1>
         <p> Our Equilibrium collection promotes balance and calm.</p>
         <div class="flex">
           <div class="eth">
@@ -36,11 +36,12 @@
         </div>
       </div>
     </div>
+    <footer class="footer">
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">King sanwo</a>
+     </footer>
   </div>
- <footer>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">King sanwo</a>
- </footer>
+ 
 </body>
 </html>
