--- a/index.html
+++ b/index.html
@@ -2,25 +2,46 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | QR code component</title>
-
-  <link rel="stylesheet" href="index.css">
+  <title>Frontend Mentor | Single Price Grid Component</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-      <main>
-        <img src="code.png" alt="QR code pointing to frontendmentor.oi" width="288" height="288">
-        <h1>Improve your Front-end skills by building projects</h1>
-        <p>Scan the QR code to Front-end mentor and take your coding skills to the next level. </p>
-      </main>
-     
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">King Sanwo</a>.
-  </div>
+  <main>
+    <div class="container">
+      <div class="community-sec">
+        <h2 class="com-header">Join our community</h2>
+        <h3>30-day, hassle-free money back guarantee</h3>
+        <p> Gain access to our full library of tutorials along with expert code reviews.<br> Perfect for any developers who are serious about honing their skills.</p>
+      </div>
+      <div class="flex-contain">
+        <div class="flex-left">
+          <h3>Monthly Subscription</h3>
+          <span class="dol"><h1>&dollar;29</h1><p class="date">per month</p></span>
+          <p class="access">Full access for less than &dollar;1 a day</p>
+          <button>Sign up</button>
+        </div>
+        <div class="flex-right">
+          <h3 class="flex-right-header">Why Us</h3>
+          <ul class="right-container">
+            <li>Tutorials by industry experts</li>
+            <li>Peer &amp; expert code review</li>
+            <li>Coding exercises</li>
+            <li>Access to our GitHub repos</li>
+            <li>Community forum</li>
+            <li>Flashcard decks</li>
+            <li>New videos every week</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </main>
+ <footer>
+    <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">king sanwo</a>.
+    </p>
+  </footer>
 </body>
 </html>
